log.txt
ExecSQLtuples(): SQL command failed: SELECT pr.id, pr.descrizione, pr.nome, pr.prezzo, fr.nome AS nomeF FROM prodotto pr, fornitore fr WHERE pr.fornitore = fr.id
ExecSQLtuples(): PGRES_FATAL_ERROR



ricerca ordini trasportatore:
ExecSQLtuples(): SQL command failed: SELECT ord.id, cst.nome, ord.datarich, ord.stato, ord.pagamento, ord.indirizzo, ord.totale FROM Ordine ord, Customer cst WHERE cst.id = ord.customer AND ord.id NOT IN (SELECT id FROM ordineconse) AND ord.id NOT IN (SELECT ordine FROM consegna)
ExecSQLtuples(): PGRES_FATAL_ERROR

Customer_Server.cpp: In member function ‘void Customer_Server::defineRoutes()’:
Customer_Server.cpp:41:21: error: cannot convert ‘Customer_Server::defineRoutes()::<lambda(const Pistache::Rest::Request&, Pistache::Http::ResponseWriter)>’ to ‘Pistache::Rest::Route::Handler’ {aka ‘std::function<Pistache::Rest::Route::Result(Pistache::Rest::Request, Pistache::Http::ResponseWriter)>’}
   41 |     router.get("/", [this](const Rest::Request& req, Http::ResponseWriter res) {
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                     |
      |                     Customer_Server::defineRoutes()::<lambda(const Pistache::Rest::Request&, Pistache::Http::ResponseWriter)>
   42 |         handleOptions(req, std::move(res));
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   43 |     });
      |     ~                
In file included from Customer_Server.h:10:
/usr/include/pistache/router.h:243:62: note:   initializing argument 2 of ‘void Pistache::Rest::Router::get(const std::string&, Pistache::Rest::Route::Handler)’
  243 |         void get(const std::string& resource, Route::Handler handler);
      |                                               ~~~~~~~~~~~~~~~^~~~~~~



